fix: add enough contrast on projects page

--- a/assets/sass/projects.scss
+++ b/assets/sass/projects.scss
@@ -1,5 +1,18 @@
 body {
-  background-color: #f5f5f5;
+  background-color: #7884a3;
+  background: linear-gradient(60deg, #6e6d7c 2%, #7884a3 69%);
+
+  .navbar {
+    background-color: white;
+  }
+
+  main.main {
+    max-width: 100%;
+  }
+
+  footer .copyright {
+    color: white;
+  }
 }
 
 main.main {
@@ -9,8 +22,6 @@ main.main {
 
   .projects-list {
     display: block;
-    padding-right: 16px;
-    padding-left: 16px;
     justify-content: center;
 
   }
@@ -186,6 +197,8 @@ main.main {
       grid-column-gap: 18px;
       grid-row-gap: 18px;
       grid-template-columns: repeat(2, 1fr);
+      padding-right: 16px;
+      padding-left: 16px;
 
       .image-box {
         img {
